Bug 426286 - Untranslatable spinbox suffix " MB"
Summary: Untranslatable spinbox suffix " MB"
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.04.1
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-07 19:33 UTC by Alexander Potashev
Modified: 2021-12-09 16:05 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2020-09-07 19:33:35 UTC
SUMMARY
Untranslatable suffix " MB" at dolphin/src/settings/general/previewssettingspage.cpp:64:

    m_localFileSizeBox->setSuffix(QStringLiteral(" MB"));

Please add a i18n*() call or use relevant wrappers for file size conversion.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Git master at 576a97d8eb9601f4ad74def6528cc90fffe97b1c.
Comment 1 Bug Janitor Service 2020-09-07 22:09:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/54
Comment 2 Nate Graham 2020-09-08 19:36:30 UTC
Git commit 9fffa4b253f58bd0aa891a173ba240d3364ec371 by Nate Graham.
Committed on 08/09/2020 at 16:59.
Pushed by ngraham into branch 'release/20.08'.

Fix untranslated spinbox suffix strings
FIXED-IN: 20.08.2

M  +2    -2    src/settings/general/previewssettingspage.cpp

https://invent.kde.org/system/dolphin/commit/9fffa4b253f58bd0aa891a173ba240d3364ec371
Comment 3 Albert Astals Cid 2021-12-09 16:05:08 UTC
Git commit d2239dfc4acc7822e4a91d22bf77f7116bd0ce2b by Albert Astals Cid, on behalf of Nate Graham.
Committed on 08/09/2020 at 08:38.
Pushed by aacid into branch 'mr/54'.

Fix untranslated spinbox suffix strings
FIXED-IN: 20.08.2

M  +2    -2    src/settings/general/previewssettingspage.cpp

https://invent.kde.org/system/dolphin/commit/d2239dfc4acc7822e4a91d22bf77f7116bd0ce2b