Fix untranslated spinbox suffix strings

BUG: 426286
FIXED-IN: 20.08.2